--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Streaming anime subtitle English" />
+    <meta name="keywords" content="anime, streaming, Shiganime, streaming anime subtitle english" />
+    <meta name="author" content="Raditya Septian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="apple-touch-icon"
