--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="/src/assets/favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="/src/assets/favicon_io/site.webmanifest" />
-    <title>Shiganime</title>
+    <title>Shiganime - Watch Anime Online</title>
   </head>
   <body>
     <div id="root"></div>
