add google site verification tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Streaming anime subtitle English" />
-    <meta name="keywords" content="anime, streaming, Shiganime, streaming anime subtitle english" />
+    <meta
+      name="keywords"
+      content="anime, streaming, Shiganime, streaming anime subtitle english"
+    />
     <meta name="author" content="Raditya Septian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -24,6 +27,10 @@
       href="/src/assets/favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="/src/assets/favicon_io/site.webmanifest" />
+    <meta
+      name="google-site-verification"
+      content="Gvryh4r82GSrVssFdz0tdngH52SI3xKTETBbMRtt0Jk"
+    />
     <title>Shiganime - Watch Anime Subtitle English</title>
   </head>
   <body>
