--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      property="og:title"
+      content="Shiganime - Streaming Anime Subtitle English"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://shiganime-en.vercel.app/" />
+    <meta property="og:image" content="./src/assets/hutao.jpg" />
+    <meta
+      property="og:description"
+      content="Streaming Anime Subtitle English"
+    />
+    <meta property="og:site_name" content="Shiganime" />
+
     <meta name="description" content="Streaming anime subtitle English" />
     <meta
       name="keywords"
@@ -31,7 +44,7 @@
       name="google-site-verification"
       content="Gvryh4r82GSrVssFdz0tdngH52SI3xKTETBbMRtt0Jk"
     />
-    <title>Shiganime - Watch Anime Subtitle English</title>
+    <title>Shiganime - Streaming Anime Subtitle English</title>
   </head>
   <body>
     <div id="root"></div>
