update navbar max-width

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://shiganime-en.vercel.app/" />
-    <meta property="og:image" content="./src/assets/hutao.jpg" />
+    <meta property="og:image" content="/hutao.jpg" />
     <meta
       property="og:description"
       content="Streaming Anime Subtitle English"
