--- a/index.html
+++ b/index.html
@@ -22,24 +22,7 @@
     />
     <meta name="author" content="Raditya Septian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/src/assets/favicon_io/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/src/assets/favicon_io/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/src/assets/favicon_io/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/src/assets/favicon_io/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <meta
       name="google-site-verification"
       content="Gvryh4r82GSrVssFdz0tdngH52SI3xKTETBbMRtt0Jk"
