refactoring major code in anime watch video, add some fitur

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta name="author" content="Raditya Septian" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
     <meta
       name="google-site-verification"
       content="Gvryh4r82GSrVssFdz0tdngH52SI3xKTETBbMRtt0Jk"
